refactor(be): 1. 메서드 길이 과다 문제 해결 - IssueService.updateIssue 메서드를 여러 개의 작은 메서드로 분리 - ProjectService.getProjectsSummaryList 메서드를 논리적 단위로 분리 2. 매직 스트링 상수화 - ProjectConstants 클래스 생성 - 모든 하드코딩된 메시지 문자열을 상수로 교체 3. 타입 캐스팅 명시성 개선 - safeLongToInt() 메서드로 안전한 타입 변환 - calculateProgressPercentage() 메서드로 퍼센트 계산 로직 분리 4. 불필요한 요소 제거 - 사용하지 않는 import 제거 - 불필요한 주석 제거 5. 코드 최적화 - Stream API에서 collect(Collectors.toList())를 toList()로 변경 (Java 16+) - 누락된 @Transactional 어노테이션 추가